# serializer version: 1
# name: test_error
  list([
    list([
      dict({
        'event_id': '<redacted-id>',
        'sent_at': '<redacted-timestamp>',
        'trace': dict({
          'environment': 'environment',
          'public_key': 'u',
          'release': 'release',
          'sample_rate': '1.0',
          'trace_id': '<redacted-id>',
        }),
      }),
      dict({
        'content_type': 'application/json',
        'length': 0,
        'type': 'check_in',
      }),
      dict({
        'check_in_id': '<redacted-id>',
        'contexts': dict({
          'trace': dict({
            'parent_span_id': '<redacted-id>',
            'span_id': '<redacted-id>',
            'trace_id': '<redacted-id>',
          }),
        }),
        'duration': 'duration',
        'environment': 'environment',
        'event_id': '<redacted-id>',
        'monitor_config': dict({
          'checkin_margin': 10.0,
          'max_runtime': 5.0,
          'schedule': dict({
            'type': 'crontab',
            'value': '10-55/5 * * * *',
          }),
          'timezone': 'Australia/Perth',
        }),
        'monitor_slug': 'sentry_gha-w4',
        'platform': 'python',
        'release': 'release',
        'sdk': dict({
          'integrations': list([
            'argv',
            'atexit',
            'dedupe',
            'excepthook',
            'logging',
            'modules',
            'stdlib',
            'threading',
          ]),
          'name': 'sentry.python',
          'packages': list([
            dict({
              'name': 'pypi:sentry-sdk',
              'version': 'version',
            }),
          ]),
          'version': 'version',
        }),
        'server_name': 'server_name',
        'status': 'in_progress',
        'timestamp': '<redacted-timestamp>',
        'type': 'check_in',
      }),
    ]),
    list([
      dict({
        'event_id': '<redacted-id>',
        'sent_at': '<redacted-timestamp>',
        'trace': dict({
          'environment': 'environment',
          'public_key': 'u',
          'release': 'release',
          'sample_rand': 'sample_rand',
          'sample_rate': '1.0',
          'sampled': 'true',
          'trace_id': '<redacted-id>',
          'transaction': 'test_main.make_subject.<locals>.my_function',
        }),
      }),
      dict({
        'content_type': 'application/json',
        'length': 0,
        'type': 'event',
      }),
      dict({
        'breadcrumbs': dict({
          'values': list([
          ]),
        }),
        'contexts': dict({
          'runtime': dict({
            'build': 'build',
            'name': 'CPython',
            'version': 'version',
          }),
          'trace': dict({
            'data': dict({
              'thread.id': 'thread.id',
              'thread.name': 'MainThread',
            }),
            'description': None,
            'op': 'function',
            'origin': 'manual',
            'parent_span_id': '<redacted-id>',
            'span_id': '<redacted-id>',
            'trace_id': '<redacted-id>',
          }),
        }),
        'environment': 'environment',
        'event_id': '<redacted-id>',
        'exception': dict({
          'values': list([
            dict({
              'mechanism': dict({
                'handled': True,
                'type': 'generic',
              }),
              'module': None,
              'stacktrace': dict({
                'frames': list([
                  dict({
                    'abs_path': '/data/data/com.termux/files/home/sentry-gha/src/sentry_gha/__init__.py',
                    'context_line': '                    return func(*args, **kwargs)',
                    'filename': '__init__.py',
                    'function': 'sync_wrapper',
                    'in_app': True,
                    'lineno': 135,
                    'module': 'sentry_gha',
                    'post_context': list([
                      '                except Exception as e:',
                      '                    capture_exception(e)',
                      '                    raise',
                      '',
                      '        try:',
                    ]),
                    'pre_context': list([
                      '            with start_transaction(',
                      '                op=OPERATION,',
                      '                name=function_name,',
                      '            ):',
                      '                try:',
                    ]),
                    'vars': dict({
                      'args': list([
                        '4',
                        '0',
                      ]),
                      'e': "ZeroDivisionError('integer division or modulo by zero')",
                      'func': '<function make_subject.<locals>.my_function at 0x705fd8fb00>',
                      'function_name': "'test_main.make_subject.<locals>.my_function'",
                      'kwargs': dict({
                      }),
                    }),
                  }),
                  dict({
                    'abs_path': '/data/data/com.termux/files/home/sentry-gha/test_main.py',
                    'context_line': '            return x // y',
                    'filename': 'test_main.py',
                    'function': 'my_function',
                    'in_app': True,
                    'lineno': 29,
                    'module': 'test_main',
                    'post_context': list([
                      '',
                      '    return my_function',
                      '',
                      '',
                      'class DummyTransport(Transport):',
                    ]),
                    'pre_context': list([
                      '',
                      '    with patch("builtins.open", return_value=fh):',
                      '',
                      '        @monitor("sentry_gha-w4", "python-app")',
                      '        def my_function(x: int, y: int) -> int:',
                    ]),
                    'vars': dict({
                      'x': '4',
                      'y': '0',
                    }),
                  }),
                ]),
              }),
              'type': 'ZeroDivisionError',
              'value': 'integer division or modulo by zero',
            }),
          ]),
        }),
        'extra': dict({
          'sys.argv': 'sys.argv',
        }),
        'level': 'error',
        'modules': dict({
          'certifi': '2025.11.12',
          'charset-normalizer': '3.4.4',
          'cron-converter': '1.2.2',
          'fancycompleter': '0.11.1',
          'idna': '3.11',
          'iniconfig': '2.3.0',
          'markdown-it-py': '4.0.0',
          'mdurl': '0.1.2',
          'packaging': '25.0',
          'pdbpp': '0.11.7',
          'pluggy': '1.6.0',
          'pygments': '2.19.2',
          'pyrepl': '0.11.4',
          'pytest': '9.0.1',
          'python-dateutil': '2.9.0.post0',
          'requests': '2.32.5',
          'rich': '14.2.0',
          'ruamel.yaml': '0.18.16',
          'ruamel.yaml.clib': '0.2.14',
          'sentry-gha': '0.1.0',
          'sentry-sdk': '2.44.0',
          'six': '1.17.0',
          'syrupy': '5.0.0',
          'urllib3': '2.5.0',
        }),
        'platform': 'python',
        'release': 'release',
        'sdk': dict({
          'integrations': list([
            'argv',
            'atexit',
            'dedupe',
            'excepthook',
            'logging',
            'modules',
            'stdlib',
            'threading',
          ]),
          'name': 'sentry.python',
          'packages': list([
            dict({
              'name': 'pypi:sentry-sdk',
              'version': 'version',
            }),
          ]),
          'version': 'version',
        }),
        'server_name': 'server_name',
        'tags': dict({
          'GITHUB_REF_NAME': 'GITHUB_REF_NAME',
        }),
        'timestamp': '<redacted-timestamp>',
        'transaction': 'test_main.make_subject.<locals>.my_function',
        'transaction_info': dict({
          'source': 'custom',
        }),
      }),
    ]),
    list([
      dict({
        'event_id': '<redacted-id>',
        'sent_at': '<redacted-timestamp>',
        'trace': dict({
          'environment': 'environment',
          'public_key': 'u',
          'release': 'release',
          'sample_rand': 'sample_rand',
          'sample_rate': '1.0',
          'sampled': 'true',
          'trace_id': '<redacted-id>',
          'transaction': 'test_main.make_subject.<locals>.my_function',
        }),
      }),
      dict({
        'content_type': 'application/json',
        'length': 0,
        'type': 'transaction',
      }),
      dict({
        'contexts': dict({
          'runtime': dict({
            'build': 'build',
            'name': 'CPython',
            'version': 'version',
          }),
          'trace': dict({
            'data': dict({
              'thread.id': 'thread.id',
              'thread.name': 'MainThread',
            }),
            'description': None,
            'op': 'function',
            'origin': 'manual',
            'parent_span_id': '<redacted-id>',
            'span_id': '<redacted-id>',
            'status': 'internal_error',
            'trace_id': '<redacted-id>',
          }),
        }),
        'environment': 'environment',
        'event_id': '<redacted-id>',
        'extra': dict({
          'sys.argv': 'sys.argv',
        }),
        'measurements': dict({
        }),
        'platform': 'python',
        'release': 'release',
        'sdk': dict({
          'integrations': list([
            'argv',
            'atexit',
            'dedupe',
            'excepthook',
            'logging',
            'modules',
            'stdlib',
            'threading',
          ]),
          'name': 'sentry.python',
          'packages': list([
            dict({
              'name': 'pypi:sentry-sdk',
              'version': 'version',
            }),
          ]),
          'version': 'version',
        }),
        'server_name': 'server_name',
        'spans': list([
        ]),
        'start_timestamp': '<redacted-timestamp>',
        'tags': dict({
          'GITHUB_REF_NAME': 'GITHUB_REF_NAME',
        }),
        'timestamp': '<redacted-timestamp>',
        'transaction': 'test_main.make_subject.<locals>.my_function',
        'transaction_info': dict({
          'source': 'custom',
        }),
        'type': 'transaction',
      }),
    ]),
    list([
      dict({
        'event_id': '<redacted-id>',
        'sent_at': '<redacted-timestamp>',
        'trace': dict({
          'environment': 'environment',
          'public_key': 'u',
          'release': 'release',
          'sample_rate': '1.0',
          'trace_id': '<redacted-id>',
        }),
      }),
      dict({
        'content_type': 'application/json',
        'length': 0,
        'type': 'check_in',
      }),
      dict({
        'check_in_id': '<redacted-id>',
        'contexts': dict({
          'trace': dict({
            'parent_span_id': '<redacted-id>',
            'span_id': '<redacted-id>',
            'trace_id': '<redacted-id>',
          }),
        }),
        'duration': 0.0,
        'environment': 'environment',
        'event_id': '<redacted-id>',
        'monitor_config': dict({
          'checkin_margin': 10.0,
          'max_runtime': 5.0,
          'schedule': dict({
            'type': 'crontab',
            'value': '10-55/5 * * * *',
          }),
          'timezone': 'Australia/Perth',
        }),
        'monitor_slug': 'sentry_gha-w4',
        'platform': 'python',
        'release': 'release',
        'sdk': dict({
          'integrations': list([
            'argv',
            'atexit',
            'dedupe',
            'excepthook',
            'logging',
            'modules',
            'stdlib',
            'threading',
          ]),
          'name': 'sentry.python',
          'packages': list([
            dict({
              'name': 'pypi:sentry-sdk',
              'version': 'version',
            }),
          ]),
          'version': 'version',
        }),
        'server_name': 'server_name',
        'status': 'error',
        'timestamp': '<redacted-timestamp>',
        'type': 'check_in',
      }),
    ]),
  ])
# ---
# name: test_monitor
  list([
    list([
      dict({
        'event_id': '<redacted-id>',
        'sent_at': '<redacted-timestamp>',
        'trace': dict({
          'environment': 'environment',
          'public_key': 'u',
          'release': 'release',
          'sample_rate': '1.0',
          'trace_id': '<redacted-id>',
        }),
      }),
      dict({
        'content_type': 'application/json',
        'length': 0,
        'type': 'check_in',
      }),
      dict({
        'check_in_id': '<redacted-id>',
        'contexts': dict({
          'trace': dict({
            'parent_span_id': '<redacted-id>',
            'span_id': '<redacted-id>',
            'trace_id': '<redacted-id>',
          }),
        }),
        'duration': 'duration',
        'environment': 'environment',
        'event_id': '<redacted-id>',
        'monitor_config': dict({
          'checkin_margin': 10.0,
          'max_runtime': 5.0,
          'schedule': dict({
            'type': 'crontab',
            'value': '10-55/5 * * * *',
          }),
          'timezone': 'Australia/Perth',
        }),
        'monitor_slug': 'sentry_gha-w4',
        'platform': 'python',
        'release': 'release',
        'sdk': dict({
          'integrations': list([
            'argv',
            'atexit',
            'dedupe',
            'excepthook',
            'logging',
            'modules',
            'stdlib',
            'threading',
          ]),
          'name': 'sentry.python',
          'packages': list([
            dict({
              'name': 'pypi:sentry-sdk',
              'version': 'version',
            }),
          ]),
          'version': 'version',
        }),
        'server_name': 'server_name',
        'status': 'in_progress',
        'timestamp': '<redacted-timestamp>',
        'type': 'check_in',
      }),
    ]),
    list([
      dict({
        'event_id': '<redacted-id>',
        'sent_at': '<redacted-timestamp>',
        'trace': dict({
          'environment': 'environment',
          'public_key': 'u',
          'release': 'release',
          'sample_rand': 'sample_rand',
          'sample_rate': '1.0',
          'sampled': 'true',
          'trace_id': '<redacted-id>',
          'transaction': 'test_main.make_subject.<locals>.my_function',
        }),
      }),
      dict({
        'content_type': 'application/json',
        'length': 0,
        'type': 'transaction',
      }),
      dict({
        'contexts': dict({
          'runtime': dict({
            'build': 'build',
            'name': 'CPython',
            'version': 'version',
          }),
          'trace': dict({
            'data': dict({
              'thread.id': 'thread.id',
              'thread.name': 'MainThread',
            }),
            'description': None,
            'op': 'function',
            'origin': 'manual',
            'parent_span_id': '<redacted-id>',
            'span_id': '<redacted-id>',
            'trace_id': '<redacted-id>',
          }),
        }),
        'environment': 'environment',
        'event_id': '<redacted-id>',
        'extra': dict({
          'sys.argv': 'sys.argv',
        }),
        'measurements': dict({
        }),
        'platform': 'python',
        'release': 'release',
        'sdk': dict({
          'integrations': list([
            'argv',
            'atexit',
            'dedupe',
            'excepthook',
            'logging',
            'modules',
            'stdlib',
            'threading',
          ]),
          'name': 'sentry.python',
          'packages': list([
            dict({
              'name': 'pypi:sentry-sdk',
              'version': 'version',
            }),
          ]),
          'version': 'version',
        }),
        'server_name': 'server_name',
        'spans': list([
        ]),
        'start_timestamp': '<redacted-timestamp>',
        'tags': dict({
          'GITHUB_REF_NAME': 'GITHUB_REF_NAME',
        }),
        'timestamp': '<redacted-timestamp>',
        'transaction': 'test_main.make_subject.<locals>.my_function',
        'transaction_info': dict({
          'source': 'custom',
        }),
        'type': 'transaction',
      }),
    ]),
    list([
      dict({
        'event_id': '<redacted-id>',
        'sent_at': '<redacted-timestamp>',
        'trace': dict({
          'environment': 'environment',
          'public_key': 'u',
          'release': 'release',
          'sample_rate': '1.0',
          'trace_id': '<redacted-id>',
        }),
      }),
      dict({
        'content_type': 'application/json',
        'length': 0,
        'type': 'check_in',
      }),
      dict({
        'check_in_id': '<redacted-id>',
        'contexts': dict({
          'trace': dict({
            'parent_span_id': '<redacted-id>',
            'span_id': '<redacted-id>',
            'trace_id': '<redacted-id>',
          }),
        }),
        'duration': 0.0,
        'environment': 'environment',
        'event_id': '<redacted-id>',
        'monitor_config': dict({
          'checkin_margin': 10.0,
          'max_runtime': 5.0,
          'schedule': dict({
            'type': 'crontab',
            'value': '10-55/5 * * * *',
          }),
          'timezone': 'Australia/Perth',
        }),
        'monitor_slug': 'sentry_gha-w4',
        'platform': 'python',
        'release': 'release',
        'sdk': dict({
          'integrations': list([
            'argv',
            'atexit',
            'dedupe',
            'excepthook',
            'logging',
            'modules',
            'stdlib',
            'threading',
          ]),
          'name': 'sentry.python',
          'packages': list([
            dict({
              'name': 'pypi:sentry-sdk',
              'version': 'version',
            }),
          ]),
          'version': 'version',
        }),
        'server_name': 'server_name',
        'status': 'ok',
        'timestamp': '<redacted-timestamp>',
        'type': 'check_in',
      }),
    ]),
  ])
# ---
